--- a/gnuboard5/mobile/skin/board/basic/style.css
+++ b/gnuboard5/mobile/skin/board/basic/style.css
@@ -46,12 +46,12 @@
 #bo_list .bo_subject .new_icon{display:inline-block;padding: 0 3px;line-height:16px ;font-size:0.833em;color:#fff;background:#c56bed}
 #bo_list .bo_tit .fa-lock{color:#666}
 
-
+#bo_cate{background:#ccc;padding-bottom:1px}
 #bo_cate h2 {width:0;height:0;font-size:0;line-height:0;overflow:hidden}
 #bo_cate ul {margin: 10px;padding-left:1px;zoom:1}
 #bo_cate ul:after {display:block;visibility:hidden;clear:both;content:""} 
 #bo_cate li{display:inline-block;float:left;margin:3px 5px 3px 0}
-#bo_cate a {display:block;line-height:24px;padding:0 10px;border-radius:13px;background:#fff;}
+#bo_cate a {display:block;line-height:24px;padding:0 10px;border-radius:3px;background:#fff;}
 #bo_cate #bo_cate_on {background:#4162ff;color:#fff;
 -webkit-box-shadow:0 0 5px  rgba(65,98,255,0.8);
 -moz-box-shadow:0 0 5px  rgba(65,98,255,0.8);
@@ -85,11 +85,19 @@ box-shadow: 0 0 8px  rgba(65,98,255,0.8);}
 .bo_notice td a {font-weight:bold}
 .td_num strong {color:#000}
 .bo_cate_link {;color:#3ca1ff !important;font-weight:normal;text-decoration:none;font-size:0.92em} /* 글제목줄 분류스타일 */
-.bo_subject{display:block;font-size:1.083em;font-weight:bold;margin:5px 0}
+.bo_subject{display:inline;font-size:1.083em;font-weight:bold;margin:5px 0}
 .bo_subject i{color: #8d96c2;font-size:12px}
 .bo_subject  .fa-heart{color:#ff0000}
 .bo_current {color:#e8180c}
-.bo_info{border-top: 1px solid #eee;margin: 10px 0 0;line-height: 20px;color: #666;position: relative;padding-top: 10px;vertical-align:top}
+.bo_info{
+font-size: 0.9em;
+    margin: 0;
+    line-height: 20px;
+    color: #666;
+    position: relative;
+    padding-top: 10px;
+    vertical-align: top;
+}
 .bo_info .comment_icon{background:url(./img/icon_comment.png) no-repeat 50% 50% ;display:inline-block;width:20px;height:28px;text-indent:-999px;overflow:hidden;vertical-align:top;background-size:70%;margin:0 0px 0 5px}
 .bo_info .bo_date{position:absolute;top:10px;right:0;font-style: italic;}
 .bo_info .cnt_cmt {display:inline-block;margin: 0 5px 0 3px;}
@@ -124,7 +132,7 @@ box-shadow: 0 1px 4px #ddd;}
 #bo_v_table {padding: 10px;color:#999;font-size:0.9em;font-weight:bold}
 
 #bo_v_title {;text-align:center}
-.bo_v_cate{display:inline-block;background: #4162ff;color: #fff;border-radius: 13px;line-height: 24px;padding: 0 10px;font-weight:normal;
+.bo_v_cate{display:inline-block;background: #4162ff;color: #fff;border-radius: 3px;line-height: 24px;padding: 0 10px;font-weight:normal;
 -webkit-box-shadow: 0 0 5px rgba(65,98,255,0.8);
 -moz-box-shadow: 0 0 5px rgba(65,98,255,0.8);
 box-shadow: 0 0 8px rgba(65,98,255,0.8);}
