--- a/gnuboard5/theme/basic/css/mobile.css
+++ b/gnuboard5/theme/basic/css/mobile.css
@@ -2,7 +2,7 @@
 
 /* 초기화 */
 html {overflow-y:scroll;height:100%;min-width:320px}
-body {margin:0;padding:0;font-size:0.75em;background:#e6e6e6;height:100%}
+body {margin:0;padding:0;font-size:0.75em;background:#fff;height:100%}
 html, h1, h2, h3, h4, h5, h6, form, fieldset, img {margin:0;padding:0;border:0}
 h1, h2, h3, h4, h5, h6 {font-size:1em}
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display:block}
@@ -231,8 +231,8 @@ a.btn_admin:focus, a.btn_admin:hover {}
 .tbl_head02 td {padding:5px 3px;border-top:1px solid #e9e9e9;border-bottom:1px solid #e9e9e9;line-height:1.4em;word-break:break-all}
 
 /* 기본리스트 */
-.list_01{padding:0 10px;}
-.list_01 li{background:#fff;border-radius:3px;margin:10px 0;padding:10px 15px;border-bottom:1px solid #ccc;}
+.list_01{padding:0px;margin-bottom:10px}
+.list_01 li{background:#fff;border-radius:3px;margin:0px 0;padding:5px 15px;border-bottom:1px solid #ccc;}
 
 /* 기본폼 */
 .form_01{margin:10px}
@@ -282,7 +282,7 @@ a.btn_admin:focus, a.btn_admin:hover {}
 .new_win .win_ul {margin:10px}
 .new_win .win_ul li {display:inline-block;}
 .new_win .win_ul li a {display: block;line-height: 24px;padding: 0 10px;}
-.new_win .win_ul li .selected {background: #4162ff;color: #fff;border-radius: 13px;
+.new_win .win_ul li .selected {background: #4162ff;color: #fff;border-radius: 3px;
 -webkit-box-shadow: 0 0 5px rgba(65,98,255,0.8);
 -moz-box-shadow: 0 0 5px rgba(65,98,255,0.8);
 box-shadow: 0 0 8px rgba(65,98,255,0.8);}
