--- a/gnuboard5/theme/basic/mobile/skin/board/basic/style.css
+++ b/gnuboard5/theme/basic/mobile/skin/board/basic/style.css
@@ -83,8 +83,8 @@ box-shadow: 0 0 8px  rgba(65,98,255,0.8);}
 .bo_notice td {background:#f7f7f7}
 .bo_notice td a {font-weight:bold}
 .td_num strong {color:#000}
-.bo_cate_link {;color:#3ca1ff !important;font-weight:normal;text-decoration:none;font-size:0.92em} /* 글제목줄 분류스타일 */
-.bo_subject{display:block;font-size:1.083em;font-weight:bold;margin:5px 0}
+.bo_cate_link {color:#3ca1ff !important;font-weight:normal;text-decoration:none;font-size:0.92em} /* 글제목줄 분류스타일 */
+.bo_subject{display:inline;font-size:1.083em;font-weight:bold;margin:5px 0}
 .bo_subject i{color: #8d96c2;font-size:12px}
 .bo_subject  .fa-heart{color:#ff0000}
 .bo_current {color:#e8180c}
@@ -125,7 +125,7 @@ box-shadow: 0 1px 4px #ddd;}
 #bo_v_table {padding: 10px;color:#999;font-size:0.9em;font-weight:bold}
 
 #bo_v_title {;text-align:center}
-.bo_v_cate{display:inline-block;background: #4162ff;color: #fff;border-radius: 13px;line-height: 24px;padding: 0 10px;font-weight:normal;
+.bo_v_cate{display:inline-block;background: #4162ff;color: #fff;border-radius: 3px;line-height: 24px;padding: 0 10px;font-weight:normal;
 -webkit-box-shadow: 0 0 5px rgba(65,98,255,0.8);
 -moz-box-shadow: 0 0 5px rgba(65,98,255,0.8);
 box-shadow: 0 0 8px rgba(65,98,255,0.8);}
