--- a/gnuboard5/theme/basic/skin/latest/basic/style.css
+++ b/gnuboard5/theme/basic/skin/latest/basic/style.css
@@ -7,7 +7,8 @@
 .lat .lat_title a:after{position:absolute;bottom:-1px;left:0;width:100%;height:2px;background:#253dbe;content:''}
 .lat ul{padding:15px 20px}
 .lat li {position:relative;line-height:18px;padding:3px 0;padding-right:50px;padding-left:10px}
-.lat li:before{position: absolute;top: 12px;left: 0px;width: 4px;height: 4px;background: #aaa;content: '';border-radius: 50%;}
+
+/* .lat li:before{position: absolute;top: 12px;left: 0px;width: 4px;height: 4px;background: #aaa;content: '';border-radius: 50%;} */
 .lat li a:hover{color:#a22121}
 .lat li .fa-heart{color:#ff0000;}
 .lat li .fa-lock{display: inline-block;line-height: 14px;width: 16px;font-size: 0.833em;color: #4f818c;background: #cbe3e8;text-align: center;border-radius: 2px;font-size: 12px;border:1px solid #a2c6ce}
@@ -24,3 +25,10 @@
 box-shadow: inset 0 2px 5px  rgba(255,255,255,0.4);}
 .lat .lt_more {position:absolute;top:11px;right:10px;display:block;width:25px;line-height:25px;color:#aaa;border-radius:3px;text-align:center;}
 .lat .lt_more:hover{color:#777}
+
+.bo_cate_link {
+  display: inline-block;
+  color: #3497d9;
+  height: 20px;
+  font-size: 0.92em;
+}
