--- a/gnuboard5/theme/basic/skin/latest/basic/style.css
+++ b/gnuboard5/theme/basic/skin/latest/basic/style.css
@@ -1,14 +1,15 @@
 @charset "utf-8";
 /* 새글 스킨 (latest) */
 
-.lat {position:relative;margin-bottom:20px;overflow:hidden;border: 1px solid #c6cacc;background:#fff}
-.lat .lat_title {display:block;padding:0 20px;line-height:45px;font-size:1.083em;border-bottom:1px solid #e2e2e2;color:#253dbe;background:#fcfcfc}
-.lat .lat_title a{color:#253dbe;display:inline-block;position:relative}
-.lat .lat_title a:after{position:absolute;bottom:-1px;left:0;width:100%;height:2px;background:#253dbe;content:''}
+.lat {position:relative;margin-bottom:20px;overflow:hidden;border: 1px solid #333;background:#111;opacity: 0.9;}
+.lat .lat_title {display:block;padding:0 20px;line-height:45px;font-size:1.083em;border-bottom:1px solid #333;color:#253dbe;background:#101;opacity: 0.9;}
+.lat .lat_title a{color:#eee;display:inline-block;position:relative}
+.lat .lat_title a:after{position:absolute;bottom:-1px;left:0;width:100%;height:2px;background:#eee;content:''}
 .lat ul{padding:15px 20px}
 .lat li {position:relative;line-height:18px;padding:3px 0;padding-right:50px;padding-left:10px}
 
 /* .lat li:before{position: absolute;top: 12px;left: 0px;width: 4px;height: 4px;background: #aaa;content: '';border-radius: 50%;} */
+.lat li a{color:#fff}
 .lat li a:hover{color:#a22121}
 .lat li .fa-heart{color:#ff0000;}
 .lat li .fa-lock{display: inline-block;line-height: 14px;width: 16px;font-size: 0.833em;color: #4f818c;background: #cbe3e8;text-align: center;border-radius: 2px;font-size: 12px;border:1px solid #a2c6ce}
