--- a/gnuboard5/theme/basic/skin/popular/basic/style.css
+++ b/gnuboard5/theme/basic/skin/popular/basic/style.css
@@ -1,10 +1,14 @@
 @charset "utf-8";
 /* 인기검색어 */
 #popular {margin:8px 0 0;position:relative}
-#popular h2{display:inline-block;font-size:0.92em;color:#4b8bff;background:#fff;line-height:20px;padding:0 5px;border:1px solid #dcdcde;vertical-align:top}
+
+
+#popular h2{display:inline-block;font-size:0.92em;color:#444;background:#fff;line-height:20px;padding:0 5px;border:1px solid #dcdcde;vertical-align:top}
 #popular .popular_inner{position:absolute;left:70px;top:2px;height:18px;overflow:hidden}
-#popular ul{display:inline-block}
+#popular ul{display:inline-block;background: #222;opacity: 0.8;}
 #popular ul:after {display:block;visibility:hidden;clear:both;content:""}
-#popular li{height:18px;line-height:18px;border-left:1px solid #c3c3c3;padding:0 10px;float:left}
+#popular li{height:18px;line-height:20px;border-left:1px solid #333;    padding: 2px 10px;
+  line-height: 14px;float:left;}
+#popular li a{color:#fff;}
 #popular li:first-child{border-left:0}
-#popular li a:hover{color:#a22121;text-decoration:underline}
+#popular li a:hover{color:#fff;text-decoration:underline}
