--- a/gnuboard5/skin/board/basic/style.css
+++ b/gnuboard5/skin/board/basic/style.css
@@ -196,7 +196,7 @@ html.no-overflowscrolling #autosave_pop {height:auto;max-height:10000px !importa
 .autosave_del{background:url(./img/close_btn.png) no-repeat 50% 50%;text-indent:-999px;overflow:hidden;height:20px;width:20px;}
 
 /* 게시판 읽기 */
-#bo_v {margin-bottom:20px;padding:20px;background:#fff;box-sizing:border-box}
+#bo_v {margin-bottom:20px;padding:20px;background:#111;opacity: 0.9;color:#eee;;box-sizing:border-box}
 
 #bo_v_table {position:absolute;top:0;right:16px;margin:0;padding:0 5px;height:25px;background:#ff3061;color:#fff;font-weight:bold;line-height:2.2em}
 
@@ -208,7 +208,8 @@ box-shadow: inset 0 2px 5px rgb(33, 135, 202);
 }
 #bo_v_title .bo_v_tit{display:block;font-size:2em;margin:5px 0 0;word-break:break-all}
 
-#bo_v_info {padding: 10px 0 15px;margin:0 0 20px;border-bottom:1px solid #ddd;color:#666}
+#bo_v_info {padding: 10px 0 15px;margin:0 0 20px;border-bottom:1px solid #ddd;color:#eee}
+#bo_v_info a {color:#eee;}
 #bo_v_info:after {display:block;visibility:hidden;clear:both;content:""} 
 #bo_v_info h2 {position:absolute;font-size:0;line-height:0;overflow:hidden}
 #bo_v_info strong {display:inline-block;margin:0 10px 0 0;font-weight:normal}
@@ -218,10 +219,10 @@ box-shadow: inset 0 2px 5px rgb(33, 135, 202);
 #bo_v_info .guest {font-weight:bold}
 #bo_v_info .profile_img {}
 #bo_v_info .profile_img img{border-radius:50%}
-#bo_v_info .sv_member{color:#000}
+#bo_v_info .sv_member{color:#eee}
 #bo_v_info .if_view{display:inline-block;background:url(./img/icon_view.png) no-repeat 50% 50%;height:15px;width:20px;overflow:hidden;text-indent:-999px;vertical-align:middle;margin-right:3px}
 #bo_v_info .if_comment{display:inline-block;background:url(./img/icon_comment.png) no-repeat 50% 50%;height:15px;width:20px;overflow:hidden;text-indent:-999px;vertical-align:middle;margin-right:3px}
-#bo_v_info .if_date{float:right;margin:0;font-style:italic;color:#888}
+#bo_v_info .if_date{float:right;margin:0;font-style:italic;color:#eee}
 
 #bo_v_file {margin:10px 0;border:1px solid #d4d4d4}
 #bo_v_file h2 {padding:10px;background: #f3f3f3}
@@ -281,7 +282,7 @@ box-shadow: inset 0 2px 5px rgb(33, 135, 202);
 #bo_v_act a {margin-right:5px;vertical-align:middle}
 #bo_v_act a:hover{background-color:#f3f3f3}
 #bo_v_act_good, #bo_v_act_nogood {display:none;position:absolute;top:30px;left:0;padding:10px 0;width:165px;background:#ff3061;color:#fff;text-align:center}
-#bo_v_act .bo_v_good{display:inline-block;border:1px solid #000;width:70px;height:70px;padding-top:40px;background:url(./img/icon_good.png) 25px 18px no-repeat;border-radius:50%;font-style:italic}
+#bo_v_act .bo_v_good{display:inline-block;border:1px solid #eee;width:70px;height:70px;padding-top:40px;background:url(./img/icon_good.png) 25px 18px no-repeat;border-radius:50%;font-style:italic}
 #bo_v_act .bo_v_nogood{display:inline-block;border:1px solid #000;width:70px;height:70px;padding-top:40px;background:url(./img/icon_bad.png) 25px 18px no-repeat;border-radius:50%;font-style:italic}
 
 #bo_v_share{position:relative;margin:20px 0;text-align:right}
@@ -315,12 +316,12 @@ box-shadow: inset 0 2px 5px rgb(33, 135, 202);
 #bo_vc header:after {display:block;visibility:hidden;clear:both;content:""}
 #bo_vc header .icon_reply {position:absolute;top:15px;left:-20px}
 #bo_vc .member, #bo_vc .guest, #bo_vc .sv_member, #bo_vc .sv_guest {font-weight:bold}
-.bo_vc_hdinfo{float:right;font-style:italic;color:#777}
+.bo_vc_hdinfo{float:right;font-style:italic;color:#eee}
 #bo_vc h1 {position:absolute;font-size:0;line-height:0;overflow:hidden}
-#bo_vc .cmt_contents {padding:15px  ;margin:10px 0 0;background: #f8fafb;border-radius:5px;border: 1px solid #e8e8e8;line-height:1.8em}
+#bo_vc .cmt_contents {padding:15px  ;margin:10px 0 0;background: #111;opacity: 0.9;;border-radius:5px;border: 1px solid #444;line-height:1.8em}
 #bo_vc p a {text-decoration:underline}
 #bo_vc p a.s_cmt {text-decoration:underline;color:#ed6479}
-#bo_vc_empty {margin:0;padding:80px 0 !important;color:#777;text-align:center}
+#bo_vc_empty {margin:0;padding:80px 0 !important;color:#eee;text-align:center}
 #bo_vc #bo_vc_winfo {float:left}
 
 .bo_vc_act {text-align:right;margin:0;list-style:none;zoom:1}
