--- a/gnuboard5/theme/basic/skin/outlogin/basic/style.css
+++ b/gnuboard5/theme/basic/skin/outlogin/basic/style.css
@@ -20,12 +20,12 @@
 #ol_auto input {width:13px;height:13px} 
 .ol_auto_wr:after {display:block;visibility:hidden;clear:both;content:""}
 
-#ol_after {background:#fff;border: 1px solid #d2d9e6; border-bottom: 1px solid #c1ccda;
+#ol_after {background:#111;border: 1px solid #444; border-bottom: 1px solid #444;
 -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
 -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
 box-shadow:0 1px 2px rgba(0,0,0,0.1)}
 #ol_after_hd {position:relative;margin:0 0 10px;padding:10px;padding-left:80px;height:72px;}
-#ol_after_hd strong{display:block;margin:5px 0}
+#ol_after_hd strong{display:block;margin:5px 0;color:#eee}
 #ol_after_hd .profile_img{position:absolute;top:15px;left:15px;display:inline-block;}
 #ol_after_hd .profile_img img{border:1px solid #bbb;border-radius:50%;width:50px;height:50px}
 #ol_after_hd .profile_img  a{display:block;position:absolute;bottom:-5px;right:-5px;background: #fff;text-align:center;font-size:17px;width:30px;line-height:30px;border-radius:50%;color:#777;
@@ -34,10 +34,10 @@ box-shadow:0 1px 2px rgba(0,0,0,0.1)}
 box-shadow: -2px -2px 5px rgba(0,0,0,0.1);}
 #ol_after_hd .btn_admin {}
 #ol_after_hd .btn_b04{line-height:23px;padding:0 5px}
-#ol_after_private {background:#f7f7f7;border-top: 1px solid #e8e8e8;zoom:1}
+#ol_after_private {background:#444;border-top: 1px solid #444;zoom:1}
 #ol_after_private:after {display:block;visibility:hidden;clear:both;content:""}
 #ol_after_private li {margin-bottom:1px;position:relative;float:left;width:33.333%;text-align:center}
-#ol_after_private a {display:block;color:#444;line-height:20px;height:60px;border-left:1px solid #e8e8e8;padding:10px 0;}
+#ol_after_private a {display:block;color:#eee;line-height:20px;height:60px;border-left:1px solid #444;padding:10px 0;}
 #ol_after_private li:first-child a{border-left:0}
 #ol_after_private a strong {display:inline-block;max-width:87px;overflow:hidden;white-space:nowrap;text-overflow:clip;background:#7587a2;color:#fff;padding:0 8px;border-radius:15px;font-size:0.92em;box-shadow:inset 2px 1px 3px rgba(0,0,0,0.2)}
 #ol_after_private a strong.scrap{padding:0 14px}
