--- a/gnuboard5/skin/board/basic/style.css
+++ b/gnuboard5/skin/board/basic/style.css
@@ -282,8 +282,8 @@ box-shadow: inset 0 2px 5px rgb(33, 135, 202);
 #bo_v_act a {margin-right:5px;vertical-align:middle}
 #bo_v_act a:hover{background-color:#f3f3f3}
 #bo_v_act_good, #bo_v_act_nogood {display:none;position:absolute;top:30px;left:0;padding:10px 0;width:165px;background:#ff3061;color:#fff;text-align:center}
-#bo_v_act .bo_v_good{display:inline-block;border:1px solid #eee;width:70px;height:70px;padding-top:40px;background:url(./img/icon_good.png) 25px 18px no-repeat;border-radius:50%;font-style:italic}
-#bo_v_act .bo_v_nogood{display:inline-block;border:1px solid #000;width:70px;height:70px;padding-top:40px;background:url(./img/icon_bad.png) 25px 18px no-repeat;border-radius:50%;font-style:italic}
+#bo_v_act .bo_v_good{display:inline-block;border:1px solid #444;width:70px;height:70px;padding-top:40px;background:url(./img/icon_good.png) 25px 18px no-repeat;border-radius:50%;font-style:italic;background-color:#555}
+#bo_v_act .bo_v_nogood{display:inline-block;border:1px solid #444;width:70px;height:70px;padding-top:40px;background:url(./img/icon_bad.png) 25px 18px no-repeat;border-radius:50%;font-style:italic;background-color:#555}
 
 #bo_v_share{position:relative;margin:20px 0;text-align:right}
 #bo_v_share .btn{padding:0 10px 0 0;color:#555;font-weight:normal;font-size:1em ;line-height:30px;height:32px;border-radius:0;border-color:#d5d5d5}
