--- a/gnuboard5/mobile/skin/board/basic/style.css
+++ b/gnuboard5/mobile/skin/board/basic/style.css
@@ -93,7 +93,7 @@ box-shadow: 0 0 8px  rgba(65,98,255,0.8);}
 font-size: 0.9em;
     margin: 0;
     line-height: 20px;
-    color: #666;
+    color: #eee;
     position: relative;
     padding-top: 10px;
     vertical-align: top;
