--- a/gnuboard5/theme/basic/css/mobile.css
+++ b/gnuboard5/theme/basic/css/mobile.css
@@ -2,7 +2,7 @@
 
 /* 초기화 */
 html {overflow-y:scroll;height:100%;min-width:320px}
-body {margin:0;padding:0;font-size:0.75em;background:#fff;height:100%}
+body {margin:0;padding:0;font-size:0.75em;background: url(/img/bg.jpg);height:100%}
 html, h1, h2, h3, h4, h5, h6, form, fieldset, img {margin:0;padding:0;border:0}
 h1, h2, h3, h4, h5, h6 {font-size:1em}
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display:block}
@@ -97,11 +97,11 @@ box-shadow: 0 0 5px  rgba(100,100,100,0.2);}
 .ts_up2 {font-size:1.3em !important}
 
 /* 중간 레이아웃 */
-#wrapper {}
+#wrapper {background: transparent}
 #wrapper:after {display:block;visibility:hidden;clear:both;content:""}
 #container {position:relative;min-height:300px}
 #container:after {display:block;visibility:hidden;clear:both;content:""}
-#container_title {font-size:1.2em;font-weight:bold;height:50px;padding:10px;line-height:30px;background:#fff;color:#333;
+#container_title {font-size:1.2em;font-weight:bold;height:50px;padding:10px;line-height:30px;background:#111;color:#eee;opacity: 0.9;;
 -webkit-box-shadow: 0 0 5px rgba(55,55,5,0.4);
 -moz-box-shadow: 0 0 5px rgba(55,55,5,0.4);
 box-shadow: 0 0 5px rgba(55,55,5,0.4);
@@ -232,8 +232,8 @@ a.btn_admin:focus, a.btn_admin:hover {}
 
 /* 기본리스트 */
 .list_01{padding:0px;margin-bottom:10px}
-.list_01 li{background:#fff;border-radius:3px;margin:0px 0;padding:5px 15px;border-bottom:1px solid #ccc;}
-
+.list_01 li{color:#eee;;border-radius:3px;margin:0px 0;padding:5px 15px;border-bottom:1px solid #ccc;}
+.list_01 li a{color:#ddd}
 
 /* 기본폼 */
 .form_01{margin:10px}
@@ -306,7 +306,7 @@ box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.2);}
 .sv_wrap .sv:before{content: "";position: absolute;top: -6px;left: 15px;width: 0;height: 0;border-style: solid;border-width: 0 6px 6px 6px;border-color: transparent transparent #333 transparent;}
 .sv_wrap .sv a {display:inline-block;width:100px;margin:0;padding:0  10px;line-height:30px;font-weight:normal;color:#bbb }
 .sv_wrap .sv a:hover{background:#000;color:#fff}
-.sv_member{color:#333;font-weight:bold;}
+.sv_member{color:#eee;font-weight:bold;}
 .sv_on {display:block !important;position:absolute;top:23px;left:0px;width:auto;height:auto}
 .sv_nojs .sv {display:block}
 
