--- a/gnuboard5/theme/basic/mobile/skin/latest/basic/style.css
+++ b/gnuboard5/theme/basic/mobile/skin/latest/basic/style.css
@@ -5,13 +5,13 @@
   font-weight: normal;
   text-decoration: none;
   font-size: 0.92em;}
-.lt {position:relative;padding:15px 0px ;}
+.lt {position:relative;padding:10px 0px ;}
 .lt .bo_name{padding:0}
-.lt ul {margin-top:3px ;padding:0;list-style:none;}
-.lt .lt_title {display:block;background: #4162ff;color: #fff;border-radius: 3px;line-height: 24px;padding: 0 10px;border-bottom:1px solid #ccc;}
+.lt ul {margin-top:0px;padding:0;list-style:none;}
+.lt .lt_title {display:block;background: #111;opacity: 0.9;;color: #fff;line-height: 30px;padding: 0 10px;border-bottom:1px solid #ccc;}
 .lt .lt_more {position:absolute;top:5px;right:10px}
 .lt .cnt_cmt {display:inline-block;margin:0 5px 0 3px;}
-.lt .lt_info{    font-size: 0.9em;  margin:  0;line-height: 20px;color: #666;position: relative;padding-top: 10px;vertical-align:top}
+.lt .lt_info{    font-size: 0.9em;  margin:  0;line-height: 20px;color: #ddd;position: relative;padding-top: 10px;vertical-align:top}
 .lt .profile_img img{border-radius:50%;vertical-align:top}
 .lt .lt_tit{display: inline;font-size: 1.083em;font-weight: bold;margin: 5px 0;}
 .lt li .fa-download{width:16px;height:16px;line-height:16px;background:#ecaa30;color:#fff;text-align:center;font-size:10px;border-radius:2px}
