--- a/gnuboard5/theme/basic/css/default.css
+++ b/gnuboard5/theme/basic/css/default.css
@@ -90,6 +90,7 @@ border: 1px solid #444 !important;
 #tnb li {float:right;border-left:1px solid #333;margin-bottom:-1px;font-size:0.92em}
 #tnb a {display:inline-block;padding:0 10px;color:#eee;line-height:35px}
 #tnb a:focus, #tnb a:hover {color:#4f4f4f;background:#fafafa}
+a.blizzard:focus, #tnb a.blizzard:hover{color:#4f4f4f;background: transparent}
 #tnb .tnb_admin a{color:#ff0000;}
 #tnb .tnb_left{float:left}
 #tnb .tnb_left a{padding:0 14px}
@@ -425,17 +426,17 @@ box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.2);}
 .pg_wrap {clear:both;margin:30px 0 ;text-align:center}
 .pg_wrap:after {display:block;visibility:hidden;clear:both;content:""} 
 .pg {}
-.pg_page, .pg_current {display:inline-block;vertical-align:middle;background:#f3f3f3;border:1px solid #bbbcc3}
+.pg_page, .pg_current {display:inline-block;vertical-align:middle;background:#666666;border:1px solid #444}
 .pg a:focus, .pg a:hover {text-decoration:none}
-.pg_page {color:#555;font-size:1.083em;height:30px;line-height:28px;padding:0 5px;min-width:30px;text-decoration:none;border-radius:3px;}
-.pg_page:hover{background-color:#ddd}
-.pg_start {text-indent:-999px;overflow:hidden;background:url('../img/btn_first.gif') no-repeat 50% 50% #fff;padding:0;border:1px solid #bbb;}
-.pg_prev {text-indent:-999px;overflow:hidden;background:url('../img/btn_prev.gif') no-repeat 50% 50% #fff;padding:0;border:1px solid #bbb}
-.pg_end {text-indent:-999px;overflow:hidden;background:url('../img/btn_end.gif') no-repeat 50% 50% #fff;padding:0;border:1px solid #bbb}
-.pg_next {text-indent:-999px;overflow:hidden;background:url('../img/btn_next.gif') no-repeat 50% 50% #fff;padding:0;border:1px solid #bbb}
+.pg_page {background:#111;color:#eee;font-size:1.083em;height:30px;line-height:28px;padding:0 5px;min-width:30px;text-decoration:none;border-radius:3px;}
+.pg_page:hover{background-color:#ddd;color:#111}
+.pg_start {text-indent:-999px;overflow:hidden;background:url('../img/btn_first.gif') no-repeat 50% 50% #fff;padding:0;border:1px solid #444;background-color:#666666;}
+.pg_prev {text-indent:-999px;overflow:hidden;background:url('../img/btn_prev.gif') no-repeat 50% 50% #fff;padding:0;border:1px solid #444;background-color:#666666;}
+.pg_end {text-indent:-999px;overflow:hidden;background:url('../img/btn_end.gif') no-repeat 50% 50% #fff;padding:0;border:1px solid #444;background-color:#666666;}
+.pg_next {text-indent:-999px;overflow:hidden;background:url('../img/btn_next.gif') no-repeat 50% 50% #fff;padding:0;border:1px solid #444;background-color:#666666;}
 .pg_start:hover,.pg_prev:hover,.pg_end:hover,.pg_next:hover{background-color:#fafafa}
 
-.pg_current {display:inline-block;background:#4c4f6f;color:#fff;font-weight:bold;height:30px;line-height:30px;padding:0 10px;min-width:30px;border-radius:3px;
+.pg_current {display:inline-block;background:#666666;color:#fff;font-weight:bold;height:30px;line-height:30px;padding:0 10px;min-width:30px;border-radius:3px;
 -webkit-box-shadow: inset 1px 1px 2px #222542;
 -moz-box-shadow:  inset 1px 1px 2px #222542;
 box-shadow: inset 1px 1px 2px #222542;
